# noise-protocol

./: Readme.md  dissonence_noise_xx.py  fake_cert.pem  noise_xx.py  requirements.txt  test-cases.py
rust/noise_xx/: Cargo.toml
rust/noise_xx/src/: main.rs
